--- a/app_tracker/templates/app_tracker/timelog_edit.html
+++ b/app_tracker/templates/app_tracker/timelog_edit.html
@@ -1,13 +1,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="col-3 d-flex justify-content-center mt-2">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Edit time log</h4>
+            <form method="POST">
+                {% csrf_token %}
+                <label for="date" class="col-form-label">Date</label><input name="date" id="date" class="form-control my-2" type="date" value="{{timelog.date|date:'Y-m-d'}}"/>
+                <label for="start_time">Start</label><input name="start_time" class="form-control my-2" id="start_time" type="time" value="{{timelog.start_time|time:'H:i'}}">
+                <label for="log_time">Time to log</label><input name="log_time" class="form-control my-2" id="log_time" value="{{timelog.log_time}}">
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <label for="date">Date</label><input name="date" id="date" type="date" value="{{timelog.date|date:'Y-m-d'}}" /> |
-        <label for="start_time">Start</label><input name="start_time" id="start_time" type="time" value="{{timelog.start_time|time:'H:i'}}"> |
-        <label for="log_time">Time to log</label><input name="log_time" id="log_time" value="{{timelog.log_time}}"> |
-        <input type="submit" value="Save changes">
-    </form>
-
+                <div class="mt-3 text-center">
+                    <a href="{% url 'app_tracker:activity' timelog.activity.pk %}" type="button" class="btn btn-secondary me-1">Cancel</a>
+                    <input type="submit" class="btn btn-success" value="Save">
+                </div>
+            </form>
+        </div>
+    </div>    
+</div>
 {% endblock content %}
+
+
+<div class="input-group input-group-sm flex-nowrap mb-2">
+    <span class="input-group-text" id="addon-wrapping">Date</span>
+    <input type="date" name="date" class="form-control" value="{{timelog.date}}">
+</div>
+<div class="input-group input-group-sm flex-nowrap mb-2">
+    <span class="input-group-text" id="addon-wrapping">Start time</span>
+    <input type="time" name="start_time" class="form-control" value="{{timelog.start_time}}" placeholder="{{timelog.start_time}}">
+</div>
+<div class="input-group input-group-sm flex-nowrap mb-2">
+    <span class="input-group-text" id="addon-wrapping">Log time</span>
+    <input type="time" name="log_time" step="2" class="form-control" value="{{timelog.log_time}}">
+</div>
