--- a/app_tracker/templates/app_tracker/category_confirm_delete.html
+++ b/app_tracker/templates/app_tracker/category_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_app.html' %}
 
 {% block content %}
 <div class="col-6 d-flex justify-content-center mt-3">
