--- a/app_tracker/templates/app_tracker/timelog_edit.html
+++ b/app_tracker/templates/app_tracker/timelog_edit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_app.html' %}
 
 {% block content %}
 <div class="col-3 d-flex justify-content-center mt-2">
