--- a/templates/base_project.html
+++ b/templates/base_project.html
@@ -104,17 +104,18 @@
 
         <header class="mb-auto">
             <div>
+                <nav class="nav nav-masthead justify-content-center float-md-start">
+                  {% block navbar %}{% endblock navbar%}
+                </nav>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
-                    {% block navbar %}{% endblock navbar%}
-
-                    {% if user.is_authenticated %}
-                    <a class="nav-link fw-bold py-1 px-0" href="">Hi, {{user.username}}</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:logout' %}">Log out</a>
-                    
-                    {% else %}
-                    <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:login' %}">Log in</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:register' %}">Register</a>
-                    {% endif %}
+                  {% if user.is_authenticated %}
+                  <a class="nav-link fw-bold py-1 px-0" href="">Hello, {{user.username}}!</a>
+                  <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:logout' %}">Log out</a>
+                  
+                  {% else %}
+                  <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:login' %}">Log in</a>
+                  <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:register' %}">Register</a>
+                  {% endif %}
                 </nav>
             </div>
         </header>
