--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -26,12 +26,11 @@
                 </ul>
             {% endif %}
 
-
+            <hr>
             <!-- Button - trigger modal -->
             <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Create new
             </button>
-            <hr>
             
             <!-- Modal - Create new category -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -86,8 +85,7 @@
                     <p>
                         Here you can see some real example of using the tracker app by me during my programming learning process.
                         <ul class="icon-list ps-0">
-                            <li class="d-flex align-items-start mb-1"><a href="" class="text-white">link</a></li>
-                            <li class="d-flex align-items-start mb-1"><a href="" class="text-white">link</a></li>
+                            <li class="d-flex align-items-start mb-1"><a href="http://localhost:8000/tracker/category/1/" class="text-white">code</a></li>
                         </ul>
                     </p>
                 </div>
