--- a/templates/base_project.html
+++ b/templates/base_project.html
@@ -109,7 +109,7 @@
                 </nav>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                   {% if user.is_authenticated %}
-                  <a class="nav-link fw-bold py-1 px-0" href="">Hello, {{user.username}}!</a>
+                  <a class="nav-link fw-bold py-1 px-0 disabled" href="">Hello, {{user.username}}!</a>
                   <a class="nav-link fw-bold py-1 px-0" href="{% url 'users:logout' %}">Log out</a>
                   
                   {% else %}
