Fixed disappearing time intreval form when input dates not in database.

--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -81,11 +81,11 @@
                     <h5>Example of use</h5>
                     <hr>
                     <p>
-                        Here you can see some real example of using the tracker app by me during my programming learning process.
-                        <ul class="icon-list ps-0">
-                            <li class="d-flex align-items-start mb-1"><a href="http://localhost:8000/tracker/category/1/" class="text-white">code</a></li>
-                        </ul>
+                        Here you can see a real example of using the tracker app by me during my programming learning process.
                     </p>
+                    <center>
+                        <a href="http://localhost:8000/tracker/category/1/" class="btn btn-light" style="width: 150px">example: code</a>
+                    </center>
                 </div>
             </div>
             <!-- Technology section -->
