--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -1,6 +1,7 @@
 {% extends 'base_app.html' %}
 {% load tracker_filters %}
 
+{% block title %}| Category {{category.name}}{% endblock title %}
 
 {% block navbar %}
 <!-- Link tree -->
