--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -1,5 +1,7 @@
 {% extends 'base_app.html' %}
 
+{% block title %}| Activity tracker{% endblock title %}
+
 {% block navbar %}
 
 <a href="{% url 'project_home' %}" class="d-inline-flex align-items-center disabled"></a>
