--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
     <br>
     Oops! Page not found!
 </h1>
-<p class="lead">You have found a page that doesn't exist.</p>
+<p class="lead">Congratulations! You've found a page that doesn't exist.</p>
 <a href="{% url 'project_home' %}" class="btn btn-secondary">Return home</a>
 
 {% endblock content %}
