--- a/templates/500.html
+++ b/templates/500.html
@@ -14,7 +14,7 @@
     <br>
     Internal Server Error
 </h1>
-<p class="lead">Sorry, it's not you - it's us.<br>Please, try again later.</p>
+<p class="lead">Sorry, it's not you, it's us.<br>Please, try again later.</p>
 <a href="{% url 'project_home' %}" class="btn btn-secondary">Return home</a>
 
 {% endblock content %}
