--- a/app_tracker/templates/app_tracker/timelog_edit.html
+++ b/app_tracker/templates/app_tracker/timelog_edit.html
@@ -1,5 +1,7 @@
 {% extends 'base_app.html' %}
 
+{% block title %}| Edit log{% endblock title %}
+
 {% block content %}
 <div class="col-3 d-flex justify-content-center mt-2">
     <div class="card">
