Added mean log time per day and top activity for category.

--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -33,6 +33,12 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><b>Total time:</b> {{category.total_time|td_format}}</li>
                 </ul>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><b>Mean:</b> {{mean_per_day|td_format}} / day</li>
+                </ul>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><b>Top activity:</b> <i>{{top_activity}}</i></li>
+                </ul>
                 {% if user == category.owner %}
                 <div class="card-footer d-inline-flex justify-content-end">
                     <!-- Edit category - trigger modal -->
