--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -37,7 +37,7 @@
                     <li class="list-group-item"><b>Mean:</b> {{mean_per_day|td_format}} / day</li>
                 </ul>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><b>Top activity:</b> <i>{{top_activity}}</i></li>
+                    <li class="list-group-item"><b>Top activity:</b> {{top_activity}}</li>
                 </ul>
                 {% if user == category.owner %}
                 <div class="card-footer d-inline-flex justify-content-end">
