Weather app kick off

--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -96,12 +96,13 @@
                     <h5>Used technology</h5>
                     <hr>
                     <ol>
-                        <li>python 3.11.1</li>
-                        <li>django 4.1.1</li>
-                        <li>pandas 1.5.3</li>
-                        <li>plotly 5.10.0</li>
-                        <li>numpy 1.24.1</li>
-                        <li>bootstrap 5.2</li>
+                        <li>Python 3.11.1</li>
+                        <li>Django 4.1.1</li>
+                        <li>Pandas 1.5.3</li>
+                        <li>Plotly 5.10.0</li>
+                        <li>Numpy 1.24.1</li>
+                        <li>Bootstrap 5.2</li>
+                        <li>PostgreSQL </li>
                     </ol>
                 </div>
             </div>
