--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -155,7 +155,7 @@
                                       </a>
                                   </li>
                                   <li>
-                                      <a class="dropdown-item disabled" href="#">
+                                      <a class="dropdown-item" href="{% url 'app_weather:weather_home' %}">
                                           <svg class="bi me-2" width="20" height="20"><use xlink:href="#cloud-sun"></svg>
                                           Weather
                                       </a>
