Create connection to current weather forecast API. Changed templates for app_tracker and app_weather

--- a/app_tracker/templates/app_tracker/activity.html
+++ b/app_tracker/templates/app_tracker/activity.html
@@ -1,4 +1,4 @@
-{% extends 'base_app.html' %}
+{% extends 'base_app_tracker.html' %}
 {% load tracker_filters %}
 
 {% block title %}| Activity {{activity.name}}{% endblock title %}
