--- a/app_weather/templates/app_weather/weather_home.html
+++ b/app_weather/templates/app_weather/weather_home.html
@@ -1,4 +1,4 @@
-{% extends 'base_app.html' %}
+{% extends 'base_app_weather.html' %}
 
 {% block title %}| Weather forecast{% endblock title %}
 
@@ -21,7 +21,7 @@
         <div class="card">
             <h5 class="card-header text-center bg-dark text-white display-6"><svg class="bi me-2" width="45" height="45"><use xlink:href="#cloud-sun"/></svg>Weather forecast</h5>
             <div class="card-body text-center">
-                <p class="card-text">Weather forecast</p>
+                <p class="card-text">Check weather forecast for any city you want.</p>
             </div>
         </div>
 
@@ -47,8 +47,9 @@
                     <ol>
                         <li>Python 3.11.1</li>
                         <li>Django 4.1.1</li>
-                        <li>Plotly 5.10.0</li>
                         <li>Bootstrap 5.2</li>
+                        <li><a href="https://bootswatch.com/">Bootswatch</a></li>
+                        <li><a href="https://openweathermap.org/api">OpenWeatherMap API</a></li>
                     </ol>
                 </div>
             </div>
