--- a/app_tracker/templates/app_tracker/activity_confirm_delete.html
+++ b/app_tracker/templates/app_tracker/activity_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base_app.html' %}
+{% extends 'base_app_tracker.html' %}
 
 {% block title %}| Delete activity {{activity.name}}{% endblock title %}
 
