Arrange weather variables in the template

--- a/app_weather/templates/app_weather/weather_home.html
+++ b/app_weather/templates/app_weather/weather_home.html
@@ -29,14 +29,18 @@
             <!-- Example section -->
             <div class="col-md">
                 <div class=" h-100 p-3 text-bg-primary rounded-3">
-                    <h5>Maybe some example</h5>
+                    <h5>{{name}} ({{country_code}})</h5>
                     <hr>
-                    <p>
-                        Maybe some description
-                    </p>
                     <center>
-                        <p>some link maybe</p>
+                        <p>
+                            {{main}}<br>
+                            {{description}}
+                        </p>
                     </center>
+                    <p>
+                        Sunrise: {{sunrise}}<br>
+                        Sunset: {{sunset}}
+                    </p>
                 </div>
             </div>
             <!-- Technology section -->
