--- a/app_weather/templates/app_weather/weather_home.html
+++ b/app_weather/templates/app_weather/weather_home.html
@@ -13,49 +13,87 @@
 
 {% block content %}
 
-<div class="col-lg-6 mx-auto p-1 py-md-4">
 
-    <!-- Logged out -->
+<div class="col mx-auto py-md-4">
+
     <div>
-        <!-- App details -->
+        <!-- Weather forecast -->
         <div class="card">
-            <h5 class="card-header text-center bg-dark text-white display-6"><svg class="bi me-2" width="45" height="45"><use xlink:href="#cloud-sun"/></svg>Weather forecast</h5>
+            <h5 class="card-header text-center bg-dark text-white display-6">
+                <svg class="bi" width="45" height="45"><use xlink:href="#bi-geo-alt"/></svg>
+                {{name}} ({{country_code}})
+            </h5>
+            <!--7 days forecast-->
             <div class="card-body text-center">
-                <p class="card-text">Check weather forecast for any city you want.</p>
-            </div>
-        </div>
+                <p class="card-text">
 
-        <div class="row align-items-md-stretch mt-4">
-            <!-- Example section -->
-            <div class="col-md">
-                <div class=" h-100 p-3 text-bg-primary rounded-3">
-                    <h5>{{name}} ({{country_code}})</h5>
-                    <hr>
-                    <center>
-                        <p>
-                            {{main}}<br>
-                            {{description}}
-                        </p>
-                    </center>
-                    <p>
-                        Sunrise: {{sunrise}}<br>
-                        Sunset: {{sunset}}
-                    </p>
-                </div>
-            </div>
-            <!-- Technology section -->
-            <div class="col-md">
-                <div class="h-100 p-3 bg-warning border rounded-3">
-                    <h5>Used technology</h5>
-                    <hr>
-                    <ol>
-                        <li>Python 3.11.1</li>
-                        <li>Django 4.1.1</li>
-                        <li>Bootstrap 5.2</li>
-                        <li><a href="https://bootswatch.com/">Bootswatch</a></li>
-                        <li><a href="https://openweathermap.org/api">OpenWeatherMap API</a></li>
-                    </ol>
-                </div>
+
+                    <div class="row align-items-md-stretch">
+                        <!--Today-->
+                        <div class="col-3 p-3 bg-primary">
+                            <h6>{{dt}}</h6>
+                            <hr>
+                            <p>
+                                {{main}}<br>
+                                <i>({{description}})</i><br><br>
+                                {{temp}}°C<br>
+                                (min: {{temp_min}}°C | max: {{temp_max}}°C)
+                            </p>
+                        </div>
+                        <!-- 2nd day -->
+                        <div class="col p-3 bg-dark border">
+                            <h6>2nd day</h6>
+                            <hr>
+                            <p>
+                                some statistics
+                            </p>
+                        </div>
+                        <!-- 3rd day -->
+                        <div class="col p-3 bg-dark border">
+                            <h6>3rd day</h6>
+                            <hr>
+                            <p>
+                                some statistics
+                            </p>
+                        </div>
+                        <!-- 4th day -->
+                        <div class="col p-3 bg-dark border">
+                            <h6>4th day</h6>
+                            <hr>
+                            <p>
+                                some statistics
+                            </p>
+                        </div>
+                        <!-- 5th day -->
+                        <div class="col p-3 bg-dark border">
+                            <h6>5th day</h6>
+                            <hr>
+                            <p>
+                                some statistics
+                            </p>
+                        </div>
+                        <!-- 6th day -->
+                        <div class="col p-3 bg-dark border">
+                            <h6>6th day</h6>
+                            <hr>
+                            <p>
+                                some statistics
+                            </p>
+                        </div>
+                        <!-- 7th day -->
+                        <div class="col p-3 bg-dark border">
+                            <h6>7th day</h6>
+                            <hr>
+                            <p>
+                                some statistics
+                            </p>
+                        </div>
+                    </div>
+
+
+
+
+                </p>
             </div>
         </div>
     </div>
